Add HA integration

--- a/ModelDestillationExperiments/mlflow-experimentation.ipynb
+++ b/ModelDestillationExperiments/mlflow-experimentation.ipynb
@@ -371,7 +371,7 @@
     "    question_prompt = \"%s Was ist die Definition von %s?\"\n",
     "    example_prompt = [{\n",
     "          \"role\": \"user\",\n",
-    "          \"content\": question_prompt % (\"Liebe\", \"Die Liebe überwindet alle Grenzen\")\n",
+    "          \"content\": question_prompt % (\"\\\"Die Liebe überwindet alle Grenzen\\\": \", \"Liebe\")\n",
     "        },\n",
     "        {\n",
     "          \"role\": \"assistant\",\n",
