--- a/ModelDestillationExperiments/mlflow-experimentation.ipynb
+++ b/ModelDestillationExperiments/mlflow-experimentation.ipynb
@@ -37,6 +37,7 @@
     "import json\n",
     "from src.mongo_utils import collection\n",
     "from src.mlflow_setup import mlflow\n",
+    "from src.ha_utils import set_sensor_state, Input\n",
     "\n",
     "\n",
     "api_endpoint = f\"http://127.0.0.1:8000/mixtral/\""
@@ -96,6 +97,9 @@
    "execution_count": 7,
    "id": "2621ae44-efa3-4877-8fd9-5b8a2283ae4f",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -292,23 +296,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "d2ce373b-98ac-48dd-ae57-7546348d3506",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eval_network(data, system_prompt, question_prompt, example, out=None):\n",
+    "def eval_network(data, experiment, out=None):\n",
     "    answers = []\n",
-    "    for index, row in tqdm(data.iterrows(), total=len(data)):\n",
+    "    pbar = tqdm(data.iterrows(), total=len(data))\n",
+    "    set_sensor_state(pbar.n, pbar.total)\n",
+    "    for index, row in pbar:\n",
+    "        set_sensor_state(pbar.n, pbar.total)\n",
     "        context_sentence = row['prompt_data']['context_sentence']\n",
     "        context_word = row['prompt_data']['context_word']\n",
     "        body = {\n",
-    "          \"system_prompts\": system_prompt,\n",
+    "          \"system_prompts\": experiment.system_prompt,\n",
     "          \"dialog\": [\n",
-    "              *example,\n",
+    "              *experiment.create_examples(),\n",
     "            {\n",
     "              \"role\": \"user\",\n",
-    "              \"content\": question_prompt % (context_sentence, context_word)\n",
+    "              \"content\": experiment.question_prompt % (context_sentence, context_word)\n",
     "            }\n",
     "          ]\n",
     "        }\n",
@@ -321,20 +328,20 @@
     "            with out:\n",
     "                out.clear_output()\n",
     "                print(f\"{context_word}\\n{context_sentence}\\n\\n{response}\")\n",
-    "\n",
+    "    set_sensor_state(pbar.n, pbar.total)\n",
     "    return answers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "35dc70fd-9341-48f8-983f-2e7708af9a0a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72474eca824b41329509fdbed0be22a7",
+       "model_id": "c78fcd051ea144cdb0ee7fe1d6d4b6a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -342,7 +349,7 @@
        "Output(layout=Layout(border_bottom='1px solid black', border_left='1px solid black', border_right='1px solid b…"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,13 +360,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "72d47fb1-b55a-4a07-a43a-0ed442df409d",
+   "execution_count": 23,
+   "id": "81be4243-27cd-4e1d-a604-ab2ff7b55c95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with mlflow.start_run():\n",
-    "    system_prompt = [\n",
+    "class Experiment:\n",
+    "    def __init__(self, system_prompt=None, question_prompt=\"\\\"%s\\\": Was ist die Definition von %s?\", example_prompts=[(\"Die Liebe überwindet alle Grenzen\", \"Liebe\", \"inniges Gefühl der Zuneigung für jemanden oder für etwas\")]):\n",
+    "        if system_prompt:\n",
+    "            self.system_prompt = system_prompt\n",
+    "        else:\n",
+    "            self.system_prompt = [\"Du bist ein Definitionsgenerator. \"\n",
+    "                \"Du antwortest in Deutsch. \"\n",
+    "                \"Du bekommst einen Beispielsatz und ein Wort aus dem Satz. \"\n",
+    "                \"Du antwortest mit der Definition des Wortes im Kontext des Beispiels. \"\n",
+    "                \"Du antwortest nur mit der Definition. \"\n",
+    "                \"Du zeigst den Bezug auf den Kontext. \"\n",
+    "                \"Du antwortest in maximal 5 Worten. \"]\n",
+    "        self.question_prompt = question_prompt\n",
+    "        self.example_prompts = example_prompts\n",
+    "\n",
+    "    def create_examples(self):\n",
+    "        ret_val = []\n",
+    "        for example, word, definition in self.example_prompts:\n",
+    "            ret_val += [{\n",
+    "              \"role\": \"user\",\n",
+    "              \"content\": self.question_prompt % (example, word)\n",
+    "            },\n",
+    "            {\n",
+    "              \"role\": \"assistant\",\n",
+    "              \"content\": definition}\n",
+    "           ]\n",
+    "        return ret_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e7e3ff22-9c67-4465-8266-fb64fc1f3669",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    Experiment(system_prompt=[\n",
     "        \"Du bist ein Definitionsgenerator. \"\n",
     "        \"Du antwortest in Deutsch. \"\n",
     "        \"Du bekommst einen Beispielsatz und ein Wort aus dem Satz. \"\n",
@@ -367,29 +409,105 @@
     "        \"Du antwortest nur mit der Definition. \"\n",
     "        \"Du zeigst den Bezug auf den Kontext. \"\n",
     "        \"Du antwortest in maximal 5 Worten. \"\n",
-    "      ]\n",
-    "    question_prompt = \"%s Was ist die Definition von %s?\"\n",
-    "    example_prompt = [{\n",
-    "          \"role\": \"user\",\n",
-    "          \"content\": question_prompt % (\"\\\"Die Liebe überwindet alle Grenzen\\\": \", \"Liebe\")\n",
-    "        },\n",
-    "        {\n",
-    "          \"role\": \"assistant\",\n",
-    "          \"content\": \"inniges Gefühl der Zuneigung für jemanden oder für etwas\"\n",
-    "        }]\n",
+    "      ], \n",
+    "               question_prompt=\"\\\"%s\\\": Was ist die Definition von %s?\", \n",
+    "               example_prompts=[(\"Die Liebe überwindet alle Grenzen\", \"Liebe\", \"inniges Gefühl der Zuneigung für jemanden oder für etwas\")]),\n",
     "\n",
-    "#    example_prompt = []\n",
-    "    mlflow.log_param(\"system_prompt\", system_prompt)\n",
-    "    mlflow.log_param(\"question_prompt\", question_prompt)\n",
-    "    mlflow.log_param(\"example_prompt\", example_prompt)\n",
     "\n",
-    "    results = mlflow.evaluate(\n",
-    "        lambda x: eval_network(x, system_prompt, question_prompt, example_prompt, out),\n",
-    "        eval_data,\n",
-    "        model_type=\"text\",\n",
-    "        targets=\"ground_truth\",\n",
-    "        extra_metrics=[mlflow.metrics.rougeL()]#, bert_f1_score_metric]\n",
-    "    )    "
+    "experiments = [\n",
+    "\n",
+    "    Experiment(system_prompt=[\n",
+    "        \"Du bist ein Definitionsgenerator. \"\n",
+    "        \"Du antwortest in Deutsch. \"\n",
+    "        \"Du bekommst einen Beispielsatz und ein Wort aus dem Satz. \"\n",
+    "        \"Du antwortest mit der Definition des Wortes im Kontext des Beispiels. \"\n",
+    "        \"Du antwortest nur mit der Definition. \"\n",
+    "        \"Du zeigst den Bezug auf den Kontext. \"\n",
+    "        \"Du antwortest in maximal 5 Worten. \"\n",
+    "      ], \n",
+    "               question_prompt=\"\\\"%s\\\": Was ist in diesem Kontext die Definition von %s?\", \n",
+    "               example_prompts=[\n",
+    "                   (\"Die Liebe überwindet alle Grenzen\", \"Liebe\", \"inniges Gefühl der Zuneigung für jemanden oder für etwas\"),\n",
+    "                   (\"Natürlich sind diese Stifte stabil und robust genug, um den täglichen Rettungseinsatz absolvieren zu können.\", \"Stifte\", \"Rekrut\"),\n",
+    "               ])\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "72d47fb1-b55a-4a07-a43a-0ed442df409d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f251732c4e0140bd9bb14eed16a5503c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jfeil/.pyenv/versions/3.10.12/envs/MasterThesis-NLP/lib/python3.10/site-packages/mlflow/data/digest_utils.py:26: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  string_columns = trimmed_df.columns[(df.applymap(type) == str).all(0)]\n",
+      "/home/jfeil/.pyenv/versions/3.10.12/envs/MasterThesis-NLP/lib/python3.10/site-packages/mlflow/models/evaluation/base.py:521: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  data = data.applymap(_hash_array_like_element_as_bytes)\n",
+      "/home/jfeil/.pyenv/versions/3.10.12/envs/MasterThesis-NLP/lib/python3.10/site-packages/mlflow/models/evaluation/base.py:521: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  data = data.applymap(_hash_array_like_element_as_bytes)\n",
+      "2024/04/19 20:11:01 INFO mlflow.models.evaluation.base: Evaluating the model with the default evaluator.\n",
+      "2024/04/19 20:11:01 INFO mlflow.models.evaluation.default_evaluator: Computing model predictions.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82d52253a2654da69d488644704f9b62",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1107 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/04/19 23:05:52 INFO mlflow.models.evaluation.default_evaluator: Testing metrics on first row...\n"
+     ]
+    }
+   ],
+   "source": [
+    "exp_tqdm = tqdm(experiments)\n",
+    "\n",
+    "for exp in exp_tqdm:\n",
+    "    set_sensor_state(exp_tqdm.n, exp_tqdm.total, Input.TOTAL_INPUT)\n",
+    "    with mlflow.start_run():\n",
+    "    \n",
+    "        mlflow.log_param(\"system_prompt\", exp.system_prompt)\n",
+    "        mlflow.log_param(\"question_prompt\", exp.question_prompt)\n",
+    "        mlflow.log_param(\"example_prompt\", exp.example_prompts)\n",
+    "    \n",
+    "        results = mlflow.evaluate(\n",
+    "            lambda x: eval_network(x, exp, out),\n",
+    "            eval_data,\n",
+    "            model_type=\"text\",\n",
+    "            targets=\"ground_truth\",\n",
+    "            extra_metrics=[mlflow.metrics.rougeL()]#, bert_f1_score_metric]\n",
+    "        )\n",
+    "set_sensor_state(exp_tqdm.n, exp_tqdm.total, Input.TOTAL_INPUT)\n"
    ]
   }
  ],
