Add missing directory

--- a/ModelDestillationExperiments/dataset-creation.ipynb
+++ b/ModelDestillationExperiments/dataset-creation.ipynb
@@ -26,8 +26,8 @@
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-02T21:24:26.405632230Z",
-     "start_time": "2024-06-02T21:24:26.402275990Z"
+     "end_time": "2024-06-10T10:13:19.187603Z",
+     "start_time": "2024-06-10T10:13:18.603382Z"
     }
    },
    "outputs": [],
@@ -49,8 +49,8 @@
    "id": "4fd9714daa9daf4a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-24T12:07:50.882651Z",
-     "start_time": "2024-05-24T12:07:50.856152Z"
+     "end_time": "2024-06-10T10:13:19.844628Z",
+     "start_time": "2024-06-10T10:13:19.840237Z"
     }
    },
    "outputs": [],
@@ -73,8 +73,8 @@
    "id": "f49340a067db8114",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-02T21:24:16.872573857Z",
-     "start_time": "2024-06-02T21:24:16.843776081Z"
+     "end_time": "2024-06-10T10:13:21.691021Z",
+     "start_time": "2024-06-10T10:13:21.687674Z"
     }
    },
    "outputs": [],
@@ -88,7 +88,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "9dd19c9a-3420-4179-bf58-d1ebff6ce00a",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-10T10:13:22.585426Z",
+     "start_time": "2024-06-10T10:13:22.582801Z"
+    }
+   },
    "outputs": [],
    "source": [
     "base_path = \"../dataset/v1/\""
@@ -96,9 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "b894c0a408a3fd67",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-10T10:13:26.783465Z",
+     "start_time": "2024-06-10T10:13:26.778679Z"
+    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -109,6 +118,8 @@
     "split = \"train\"\n",
     "\n",
     "def write_split(split, base_path=\"../dataset/v1/\", overwrite=False):\n",
+    "    if not os.path.exists(base_path):\n",
+    "        os.mkdir(base_path)\n",
     "    path = os.path.join(base_path, f\"{split}.parquet\")\n",
     "    if os.path.exists(path):\n",
     "        if overwrite:\n",
@@ -119,19 +130,26 @@
     "    data = []\n",
     "    for value in generator(split):\n",
     "        data.append(value)\n",
-    "    df = pd.DataFrame(data=data, columns=[\"title\", \"context_word\", \"context_title\", \"gt\"])\n",
+    "    df = pd.DataFrame(data=data, columns=[\"title\", \"context_word\", \"context_sentence\", \"gt\"])\n",
     "    table = pa.Table.from_pandas(df)\n",
     "    pq.write_table(table, path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "6c4b8658-c365-489f-b9ae-4ee520beed8e",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-10T10:14:17.832919Z",
+     "start_time": "2024-06-10T10:14:07.435670Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "write_split(\"test\")"
+    "write_split(\"train\", overwrite=True)\n",
+    "write_split(\"test\", overwrite=True)\n",
+    "write_split(\"val\", overwrite=True)"
    ]
   },
   {
