Add new german dataset

--- a/ModelDestillationExperiments/dataset-creation.ipynb
+++ b/ModelDestillationExperiments/dataset-creation.ipynb
@@ -8,10 +8,6 @@
     "ExecuteTime": {
      "end_time": "2024-05-24T09:49:44.824053Z",
      "start_time": "2024-05-24T09:49:44.806527Z"
-    },
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
     }
    },
    "outputs": [],
@@ -39,13 +35,13 @@
     "import pandas as pd\n",
     "\n",
     "sys.path.insert(0, '../')\n",
-    "from src.mongo_utils import collection, create_set, get_all_entries, set_datasplit\n",
+    "from src.mongo_utils import collection_de, create_set, get_all_entries, set_datasplit\n",
     "from src.utils import sanitize_context"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "4fd9714daa9daf4a",
    "metadata": {
     "ExecuteTime": {
@@ -55,8 +51,8 @@
    },
    "outputs": [],
    "source": [
-    "def generator(split, postprocess=lambda x, y, a, b: (x, y, a, b)):\n",
-    "    pointer = get_all_entries(split=split)\n",
+    "def generator(col, split, postprocess=lambda x, y, a, b: (x, y, a, b)):\n",
+    "    pointer = get_all_entries(col, split=split)\n",
     "    buffer = []\n",
     "\n",
     "    for data in pointer:\n",
@@ -69,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 100,
    "id": "f49340a067db8114",
    "metadata": {
     "ExecuteTime": {
@@ -79,14 +75,34 @@
    },
    "outputs": [],
    "source": [
-    "test = generator(split=\"test\")\n",
-    "train = generator(split=\"train\")\n",
-    "val = generator(split=\"val\")"
+    "test = generator(collection_de, split=\"test\")\n",
+    "train = generator(collection_de, split=\"train\")\n",
+    "val = generator(collection_de, split=\"val\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 99,
+   "id": "4ac7fa4b-015f-4cbe-821d-f29326940bf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Subregnum', 'Subregnum', \"Die Taxonomie der Biologie geht auf die Systematik Carl von Linnés zurück. Hier finden wir Begriffe wie Regnum - ''Subregnum'' - Divisio und Subdivisio, mit anderen Worten Reich - Unterreich - Abteilung und Unterabteilung.\", 'nächstkleinere Unterteilung der taxonomischen Regna (Reiche)')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in train:\n",
+    "    print(i)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "9dd19c9a-3420-4179-bf58-d1ebff6ce00a",
    "metadata": {
     "ExecuteTime": {
@@ -96,12 +112,12 @@
    },
    "outputs": [],
    "source": [
-    "base_path = \"../dataset/v1/\""
+    "base_path = \"../dataset/v2/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 102,
    "id": "b894c0a408a3fd67",
    "metadata": {
     "ExecuteTime": {
@@ -117,7 +133,7 @@
    "source": [
     "split = \"train\"\n",
     "\n",
-    "def write_split(split, base_path=\"../dataset/v1/\", overwrite=False):\n",
+    "def write_split(col, split, base_path=base_path, overwrite=False):\n",
     "    if not os.path.exists(base_path):\n",
     "        os.mkdir(base_path)\n",
     "    path = os.path.join(base_path, f\"{split}.parquet\")\n",
@@ -128,7 +144,7 @@
     "            raise Exception(\"Already existing!\")\n",
     "    \n",
     "    data = []\n",
-    "    for value in generator(split):\n",
+    "    for value in generator(col, split):\n",
     "        data.append(value)\n",
     "    df = pd.DataFrame(data=data, columns=[\"title\", \"context_word\", \"context_sentence\", \"gt\"])\n",
     "    table = pa.Table.from_pandas(df)\n",
@@ -137,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 103,
    "id": "6c4b8658-c365-489f-b9ae-4ee520beed8e",
    "metadata": {
     "ExecuteTime": {
@@ -147,9 +163,9 @@
    },
    "outputs": [],
    "source": [
-    "write_split(\"train\", overwrite=True)\n",
-    "write_split(\"test\", overwrite=True)\n",
-    "write_split(\"val\", overwrite=True)"
+    "write_split(collection_de, \"train\", overwrite=True)\n",
+    "write_split(collection_de, \"test\", overwrite=True)\n",
+    "write_split(collection_de, \"val\", overwrite=True)"
    ]
   },
   {
@@ -164,7 +180,7 @@
    },
    "outputs": [],
    "source": [
-    "train = generator(split=\"train\")"
+    "train = generator(collection_de, split=\"train\")"
    ]
   },
   {
@@ -200,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9f6326da6f6607b6",
    "metadata": {
     "ExecuteTime": {
@@ -210,12 +226,12 @@
    },
    "outputs": [],
    "source": [
-    "all_data = list(get_all_entries())"
+    "all_data = list(get_all_entries(collection_de))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "1b4e4142ae06eb06",
    "metadata": {
     "ExecuteTime": {
@@ -234,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "id": "5e3d0d53cd2a241e",
    "metadata": {
     "ExecuteTime": {
@@ -251,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "id": "eec6e3fea8131e24",
    "metadata": {
     "ExecuteTime": {
@@ -263,16 +279,37 @@
     {
      "data": {
       "text/plain": [
-       "155878"
+       "129674"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(all_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ffbfcd36-86ca-47a2-96e2-94f59c2972f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "359515"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(all_sets)"
    ]
   },
   {
@@ -303,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "13fc2b340b127464",
    "metadata": {
     "ExecuteTime": {
@@ -321,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "cdbd84a88e451dd1",
    "metadata": {
     "ExecuteTime": {
@@ -334,8 +371,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test: 15588, Train: 124858, Val: 15432, Train+Val: 140290\n",
-      "Test: 41265, Train: 331032, Val: 40872, Train+Val: 371904\n"
+      "Test: 12968, Train: 103868, Val: 12838, Train+Val: 116706\n",
+      "Test: 35733, Train: 288119, Val: 35663, Train+Val: 323782\n"
      ]
     }
    ],
@@ -350,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e4bfcc93adfcd54e",
    "metadata": {
     "ExecuteTime": {
@@ -363,9 +400,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.09987438554199371\n",
-      "0.09892320091778425\n",
-      "0.801202413540222\n"
+      "0.09939223676341738\n",
+      "0.09919753000570213\n",
+      "0.8014102332308805\n"
      ]
     }
    ],
@@ -377,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "fa2190e7b34ea6f8",
    "metadata": {
     "ExecuteTime": {
@@ -390,9 +427,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.10000128305469662\n",
-      "0.09900050039133168\n",
-      "0.8009982165539717\n"
+      "0.10000462698767679\n",
+      "0.09900211299103907\n",
+      "0.8009932600212841\n"
      ]
     }
    ],
@@ -404,19 +441,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b5d04df2630c5f68",
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_datasplit(test, 'test')\n",
-    "set_datasplit(train, 'train')\n",
-    "set_datasplit(val, 'val')"
+    "set_datasplit(collection_de, test, 'test')\n",
+    "set_datasplit(collection_de, train, 'train')\n",
+    "set_datasplit(collection_de, val, 'val')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "82cb7f7906baef9c",
    "metadata": {
     "ExecuteTime": {
@@ -424,7 +461,103 @@
      "start_time": "2024-05-24T09:56:52.712031Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Vollform</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Neugeborener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Neun</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Springerbauer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Achievementtest</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12963</th>\n",
+       "      <td>gegenstandslos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12964</th>\n",
+       "      <td>Namenwort</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12965</th>\n",
+       "      <td>Fürstentum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12966</th>\n",
+       "      <td>korrektiv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12967</th>\n",
+       "      <td>Adressbuch</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12968 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 title\n",
+       "0             Vollform\n",
+       "1         Neugeborener\n",
+       "2                 Neun\n",
+       "3        Springerbauer\n",
+       "4      Achievementtest\n",
+       "...                ...\n",
+       "12963   gegenstandslos\n",
+       "12964        Namenwort\n",
+       "12965       Fürstentum\n",
+       "12966        korrektiv\n",
+       "12967       Adressbuch\n",
+       "\n",
+       "[12968 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -434,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "c655fa960bb0083a",
    "metadata": {
     "ExecuteTime": {
@@ -446,10 +579,10 @@
     {
      "data": {
       "text/plain": [
-       "ObjectId('6613c7782cfcd7a854112d94')"
+       "ObjectId('6687babe9a5a7acaf44cfca0')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,17 +672,17 @@
    "source": [
     "from pymongo import UpdateOne\n",
     "\n",
-    "def set_datasplit(dataset, split):\n",
+    "def set_datasplit(col, dataset, split):\n",
     "    updates = []\n",
     "    for d in dataset:\n",
     "        updates.append(UpdateOne({'_id': d['_id']}, {\"$set\": {\"split\": split}}))\n",
-    "    collection.bulk_write(updates)\n",
+    "    col.bulk_write(updates)\n",
     "    \n",
-    "def unset_datasplit(dataset):\n",
+    "def unset_datasplit(col, dataset):\n",
     "    updates = []\n",
     "    for d in dataset:\n",
     "        updates.append(UpdateOne({'_id': d['_id']}, {\"$unset\": {\"split\": 1}}))\n",
-    "    collection.bulk_write(updates)"
+    "    col.bulk_write(updates)"
    ]
   },
   {
